CORE-6620: Fixing the width on mobile for image.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_plp_sub_category_block.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/products/_plp_sub_category_block.scss
@@ -18,8 +18,8 @@
       }
 
       @include breakpoint($only-mobile) {
-        margin-#{$right}: 4px;
-        min-width: 4.375rem;
+        margin-#{$right}: 0.25rem;
+        min-width: 5.625rem;
       }
 
       &:hover {
